<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".screens.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/screenTitleTextView"
            style="@style/TitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/dataContainer"
            app:layout_constraintVertical_chainStyle="packed"
            android:text="@string/profile_title_hint"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dataContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/screenTitleTextView"
            app:layout_constraintBottom_toTopOf="@id/editProfileButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="30dp"
            >


            <TextView
                android:id="@+id/usernameHintTextView"
                style="@style/ProfileHintTextView"
                android:text="@string/field_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/startBarrier"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/startBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="usernameHintTextView"/>

            <TextView
                android:id="@+id/usernameTextView"
                style="@style/ProfileValueTextView"
                tools:text="admin"
                app:layout_constraintStart_toStartOf="@id/startBarrier"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataContainer"
            app:layout_constraintBottom_toTopOf="@id/logoutButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/action_edit_profile"/>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editProfileButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/action_logout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>